# PIP, using PEP621
[project]
name = "imc"
# version = "0.0.19.dev24+g43d6c06"
description = "A framework for IMC data analysis."
authors = [
    {name = "Andre Rendeiro", email = "afrendeiro@gmail.com"},
]
# python = "^3.8"
readme = "README.md"
keywords = [
    "computational biology",
    "bioinformatics",
    "imaging mass cytometry",
    "imaging",
    "mass cytometry",
    "mass spectrometry",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "setuptools_scm",
    "outdated",
    "ordered-set",
    "urlpath",
    "PyYAML",
    "imctools>=2.1.0",
    "joblib",
    "leidenalg",
    "python-louvain",
    "networkx>=3.0.0",
    "pandas>=1.0.1",
    "matplotlib>=3.5.0",
    "scikit-image==0.19.0",
    "seaborn",
    "fastcluster",
    "parmap",
    "scanpy",
    "bbknn",
    "numpy_groupies",
    "tifffile==2022.4.8",
    "seaborn-extensions"
]
dynamic = ['version']

[project.optional-dependencies]
# not yet supported by pip!
extra = [
    "stardist>=0.7.1,<1.0.0",
    "DeepCell>=0.8.3,<1.0.0",
    "cellpose>=0.6.5,<1.0.0",
    "astir>=0.1.4,<1.0.0",
]
stardist = [
    "stardist>=0.7.1,<1.0.0",
]
deepcell = [
    "DeepCell>=0.8.3,<1.0.0",
]
cellpose = [
    "cellpose>=0.6.5,<1.0.0",
]
astir = [
    "astir>=0.1.4,<1.0.0",
]
dev = [
    "wheel",
    "ipython",
    "black[d]",
    "mypy>=0.900",  # pin to version supporting pyproject.toml
    "pandas-stubs",
    "pylint",
    "flake8",
    "git-lint",
    "pydocstyle",
    "rich",
    # data-science-types
    "PyQt5",
]
test = [
    "pytest>=6",
    "pytest-cov",
]
doc = [
    "Sphinx",
    "sphinx-issues",
    "sphinx-rtd-theme",
    "sphinx-argparse",
]

[project.urls]
homepage = "https://github.com/ElementoLab/imc"
repository = "https://github.com/ElementoLab/imc"
documentation = "https://github.com/ElementoLab/imc"
changelog = "https://github.com/ElementoLab/imc/blob/master/docs/source/changelog.md"

[project.scripts]
imc = "imc.cli:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]

# build-backend = "flit_core.buildapi"
# requires = ["flit_core >=3.2,<4"]

[tool.setuptools_scm]
write_to = "imc/_version.py"
write_to_template = 'version = __version__ = "{version}"'

[tool.black]
line-length = 90
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.mypy]
python_version = '3.9'
warn_return_any = true
warn_unused_configs = true

# Packages without type annotations in shed yet
[[tool.mypy.overrides]]
module = [
    'numpy.*',
    'pandas.*',
    'scipy.*',
    'skimage.*',
    'matplotlib.*',
    'seaborn.*',
    'parmap.*',
    'anndata.*',
    'scanpy.*',
    'pymde.*',
    'umap.*',
    'networkx.*',
    'pingouin.*',
    'tqdm.*',
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "imc/tests"
]
markers = [
    'slow', # 'marks tests as slow (deselect with "-m 'not slow'")',
    'serial'
]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39

[testenv]
deps = pytest >= 6, <7
commands = pytest
"""
