# Remove once PIP supports reading project metadata from pyproject.toml
[metadata]
name = imc
version = 0.0.0

[options]
install_requires =
    # python>=3.8
    setuptools_scm
    ordered-set
    urlpath
    PyYAML
    parmap
    tqdm
    joblib
    numpy
    numpy_groupies
    pandas>=1.0.1
    imctools>=2.1.0
    tifffile>=2020.6.3
    scikit-image>=0.17.2
    leidenalg
    python-louvain
    networkx
    scanpy
packages = find:

[options.extras_require]
deepcell = DeepCell>=0.8.3,<1.0.0
cellpose = cellpose>=0.1.0.1,<1.0.0

[options.entry_points]
console_scripts =
    imc = imc.cli:main
