# Remove once PIP supports reading project metadata from pyproject.toml
[metadata]
name = imc
version = 0.0.0

[options]
install_requires =
    # python>=3.8
    setuptools_scm
    ordered-set
    urlpath
    PyYAML
    parmap
    tqdm
    joblib
    numpy
    numpy_groupies
    pandas>=1.0.1
    matplotlib>=3.5.0
    imctools>=2.1.0
    tifffile>=2020.6.3
    scikit-image>=0.17.2
    leidenalg
    python-louvain
    networkx
    scanpy
    bbknn
    seaborn>=0.11.1
    seaborn-extensions>=0.0.11
packages = find:

[options.extras_require]
extra =
    DeepCell>=0.8.3,<1.0.0
    cellpose>=0.1.0.1,<1.0.0
    astir>=0.1.4,<1.0.0
    napari
    napari-imc
deepcell =
    DeepCell>=0.8.3,<1.0.0
cellpose =
    cellpose>=0.1.0.1,<1.0.0
astir = 
    astir>=0.1.4,<1.0.0
napari =
    napari
    napari-imc
dev =
    wheel
    ipython
    black[d]
    mypy>=0.900
    pandas-stubs
    pylint
    git-lint
    pydocstyle
    rich
    data-science-types
    PyQt5
test = 
    pytest>=6
    pytest-cov
doc =
    Sphinx
    sphinx-issues
    sphinx-rtd-theme
    sphinx-argparse

[options.entry_points]
console_scripts =
    imc = imc.cli:main
