# Remove once PIP supports reading project metadata from pyproject.toml
[metadata]
name = imc
description = A package for processing and analysis of imaging mass cytometry (IMC) data.
version = attr: imc.__version__
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = science, bioinformatics, bioimage analysis, imaging mass cytometry
url = https://github.com/ElementoLab/imc
project_urls =
    Bug Tracker = https://github.com/ElementoLab/imc/issues
    Documentation = https://imc.readthedocs.io
    Source Code = https://github.com/ElementoLab/imc

author = Andre Rendeiro
author_email = afrendeiro@gmail.com
license = GPL3

[options]
install_requires =
    # python>=3.8
    setuptools_scm
    outdated
    ordered-set
    urlpath
    PyYAML
    parmap
    tqdm
    joblib
    numpy
    numpy_groupies
    scipy>=1.7
    pandas>=1.0.1
    matplotlib>=3.5.0
    imctools>=2.1.0
    tifffile>=2022.5.4
    scikit-image>=0.17.2
    leidenalg
    python-louvain
    networkx
    scanpy
    bbknn
    seaborn>=0.11.1
    seaborn-extensions>=0.0.11
packages = find:

[options.package_data]
imc = logo.png, py.typed

[options.extras_require]
extra =
    DeepCell>=0.8.3,<1.0.0
    cellpose>=0.1.0.1,<1.0.0
    astir>=0.1.4,<1.0.0
    napari
    napari-imc
deepcell =
    DeepCell>=0.8.3,<1.0.0
cellpose =
    cellpose>=0.1.0.1,<1.0.0
astir = 
    astir>=0.1.4,<1.0.0
napari =
    napari
    napari-imc
dev =
    wheel
    ipython
    black[d]
    mypy>=0.900
    pandas-stubs
    pylint
    git-lint
    pydocstyle
    rich
    pytest>=6
    pytest-cov
doc =
    Sphinx
    sphinx-issues
    sphinx-rtd-theme
    sphinx-argparse
    myst_parser
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    imc = imc.cli:main
